Closed
Bug 712907
Opened 13 years ago
Closed 13 years ago
Assertion failure: lastProperty()->hasTable(), at js/src/jsscope.cpp:493
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
mozilla12
People
(Reporter: decoder, Assigned: bhackett1024)
Details
(Keywords: assertion, testcase, Whiteboard: js-triage-needed)
Attachments
(2 files)
1.84 KB,
application/x-compressed-tar
|
Details | |
551 bytes,
patch
|
luke
:
review+
|
Details | Diff | Splinter Review |
The attached test asserts on mozilla-central revision f98c57415d8d (options -m -n). I assume this test is fragile across architectures (use 32 bit) because it's an OOM (with gcparam though).
Assignee | ||
Comment 1•13 years ago
|
||
The return value of the hashify() call when converting objects to dictionary mode was being ignored.
Assignee: general → bhackett1024
Attachment #584132 -
Flags: review?(luke)
![]() |
||
Updated•13 years ago
|
Attachment #584132 -
Flags: review?(luke) → review+
Assignee | ||
Comment 2•13 years ago
|
||
Comment 3•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla12
You need to log in
before you can comment on or make changes to this bug.
Description
•