Check return value of hashify() call, bug 712907. r=luke